--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -68,17 +68,17 @@
               href: retrieve-access-review.md
         - name: Azure AD-roller
           items:
-            - name: Granska mina Azure AD-roller
-              href: ../privileged-identity-management/pim-how-to-perform-security-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
-            - name: Starta en åtkomstgranskning
+            - name: Skapa en åtkomstgranskning
               href: ../privileged-identity-management/pim-how-to-start-security-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
+            - name: Granska åtkomst
+              href: ../privileged-identity-management/pim-how-to-perform-security-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
             - name: Slutför en åtkomstgranskning
               href: ../privileged-identity-management/pim-how-to-complete-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
         - name: Azure-resursroller
           items:
-            - name: Granska mina Azure-resursroller
-              href: ../privileged-identity-management/pim-resource-roles-perform-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
-            - name: Starta en åtkomstgranskning
+            - name: Skapa en åtkomstgranskning
               href: ../privileged-identity-management/pim-resource-roles-start-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
+            - name: Granska åtkomst
+              href: ../privileged-identity-management/pim-resource-roles-perform-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
             - name: Slutför en åtkomstgranskning
               href: ../privileged-identity-management/pim-resource-roles-complete-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
